se modifico el proyecto

--- a/HTML y CSS/index.html
+++ b/HTML y CSS/index.html
@@ -38,7 +38,7 @@
 
     <footer>
         <!-- Pie de página con autores-->
-        <h5 id="id-autores">&copy;Autores: Aimara Gomez Ganancias y Juliana Marengo.</h5>
+        <h5 id="id-autores">&copy;Autores: Gomez Ganancias Aimara y Marengo Juliana.</h5>
     </footer>
 
 </body>
