se modifico el proyecto

--- a/HTML y CSS/index.html
+++ b/HTML y CSS/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
     <!-- Metadatos-->
     <title>Flappy Bird</title>
@@ -9,11 +9,11 @@
     <link rel="icon" href="flappybird.ico">
     <!--css dirigido al archivo de css-->
     <link rel="stylesheet" type="text/css" href="estilo.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,200&display=swap"rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,200&display=swap" rel="stylesheet">
 
 </head>
 <body>
-<h1 class="titulo-h1">Flappy Bird<h1> <!-- edicion por clases-->
+<h1 class="titulo-h1">Flappy Bird </h1> <!-- edicion por clases-->
     <header>
         <nav>
             <!-- Botones del index que redirige a los otros html-->
