se modifico el proyecto

--- a/HTML y CSS/gameover.html
+++ b/HTML y CSS/gameover.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
     <title>Puntaje</title>
     <meta charset="utf-8">
@@ -9,9 +9,9 @@
     <link rel="icon" href="flappybird.ico">
     <!--css dirigido al archivo de css-->
     <link rel="stylesheet" type="text/css" href="estilo.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,200&display=swap"rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,200&display=swap" rel="stylesheet">
 </head>
-<body>
+<se>
 <section>
     <h1 class="titulo-h1">Flappy Bird</h1>
     <section class="alineacion" >
@@ -26,11 +26,9 @@
     </div>
 
     <section>
-
         <footer>
             <!-- Pie de página con autores-->
             <h5 id="id-autores">&copy;Autores: Aimara Gomez Ganancias y Juliana Marengo.</h5>
         </footer>
-
 </body>
 </html>
