--- a/HTML y CSS/puntaje.html
+++ b/HTML y CSS/puntaje.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
     <title>Puntaje</title>
     <meta charset="utf-8">
@@ -9,7 +9,7 @@
     <link rel="icon" href="flappybird.ico">
     <!--css dirigido al archivo de css-->
     <link rel="stylesheet" type="text/css" href="estilo.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,200&display=swap"rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,200&display=swap" rel="stylesheet">
 </head>
 <body>
 <article >
