--- a/HTML y CSS/como.jugar.html
+++ b/HTML y CSS/como.jugar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
     <title>como jugar</title>
     <meta charset="utf-8">
@@ -9,14 +9,14 @@
     <link rel="icon" href="flappybird.ico">
     <!--css dirigido al archivo de css-->
     <link rel="stylesheet" type="text/css" href="estilo.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,200&display=swap"rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,200&display=swap" rel="stylesheet">
 </head>
 
 <body>
 <article>
     <h1 class="titulo-h1">Flappy Bird</h1>
     <section class="alineacion">
-        <h2 id="subtitulo">Como Jugar<h2>
+        <h2 id="subtitulo">Como Jugar</h2>
             <h3 >1. Hay que conseguir llegar lo más lejos posible esquivando<br> los obstáculos que van apareciendo en el camino de el personaje volador.</h3>
             <h3>2. Para lograr eso, el personaje debe volar un poco hacia arriba<br>presionando la tecla. <span class="color-extra"> [Space] </span></h3>
 
