se subio trabajo de javascript

--- a/HTML, CSS y JS/jugar.html
+++ b/HTML, CSS y JS/jugar.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-    <title>Puntaje</title>
-    <meta charset="utf-8">
+    <title>Jugar</title>
+   <meta charset="utf-8">
     <meta name="keywords" content="juego, Flappy Bird, juego en linea">
     <meta name="autores" content="Aimara Gomez y Juliana Marengo">
+    <link rel="icon" href="img/flappybird.ico">
     <meta name="description" content="Es un juego en linea cuyo funcionamiento consiste en mantener volando a un pequeño pájaro pixelado que ha de pasar entre tuberías">
-    <link rel="icon" href="flappybird.ico">
     <!--css dirigido al archivo de css-->
     <link rel="stylesheet" type="text/css" href="estilo.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,200&display=swap"rel="stylesheet">
+
 </head>
+
 <body>
-<article >
-    <h1 class="titulo-h1">Flappy Bird</h1>
-    <section class="alineacion">
-        <h2 id="subtitulo">Puntaje</h2>
-        <p>Record:[número]
-        </p>
-    </section>
-    <div class="alineacion">
-        <form action="index.html">
-            <button type="submit">Volver</button>
-        </form>
-    </div>
+<h1 class="titulo-h1">Flappy Bird</h1>
 
-</article>
 
+<div class="alineacion">
+     <h3>¿Estás seguro de aceptar el desafio?
+    </h3>  
+    <form action="desarrollo_juego.html">
+            <img src="img/desafio.gif"> 
+          <button type="submit" class="selected">Empezar</button>
+    </form>
+</div>
+ 
 <footer>
     <!-- Pie de página con autores-->
     <h5 id="id-autores">&copy;Autores: Aimara Gomez Ganancias y Juliana Marengo.</h5>
 </footer>
-
 </body>
+
+
 </html>
