--- a/HTML, CSS y JS/como.jugar.html
+++ b/HTML, CSS y JS/como.jugar.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
     <title>como jugar</title>
     <meta charset="utf-8">
     <meta name="keywords" content="juego, Flappy Bird, juego en linea">
     <meta name="autores" content="Aimara Gomez y Juliana Marengo">
     <link rel="icon" href="img/flappybird.ico">
-    <meta name="description" content="Es un juego en linea cuyo funcionamiento consiste en mantener volando a un pequeño pájaro pixelado que ha de pasar entre tuberías">
+    <meta name="description"
+          content="Es un juego en linea cuyo funcionamiento consiste en mantener volando a un pequeño pájaro pixelado que ha de pasar entre tuberías">
     <!--css dirigido al archivo de css-->
     <link rel="stylesheet" type="text/css" href="estilo.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,200&display=swap"rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,200&display=swap" rel="stylesheet">
 </head>
 
 <body>
 <article>
     <h1 class="titulo-h1">Flappy Bird</h1>
-     <section class="alineacion">
-        <h2 id="subtitulo">Como Jugar<h2>
-            <h3 >1. Hay que conseguir llegar lo más lejos posible esquivando<br> los obstáculos que van apareciendo en el camino de el personaje volador.</h3>
-            <h3>2. Para lograr eso, el personaje debe volar un poco hacia arriba<br>presionando la tecla. <span class="color-extra"> [PULSAR el mouse o SPACE] </span></h3>
+    <section class="alineacion">
+        <h2 id="subtitulo">Como Jugar</h2>
+        <h3>1. Hay que conseguir llegar lo más lejos posible esquivando<br> los obstáculos que van apareciendo en el
+            camino de el personaje volador.</h3>
+        <h3>2. Para lograr eso, el personaje debe volar un poco hacia arriba<br>presionando la tecla. <span
+                class="color-extra"> [PULSAR el mouse o SPACE] </span></h3>
 
-            <div>
-                <form action="index.html">
-                    <button type="submit">Volver</button>
-                </form>
-            </div>
+        <div>
+            <form action="index.html">
+                <button type="submit">Volver</button>
+            </form>
+        </div>
     </section>
 </article>
 <footer>
