--- a/HTML, CSS y JS/desarrollo_juego.html
+++ b/HTML, CSS y JS/desarrollo_juego.html
@@ -1,38 +1,39 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-     <!-- Metadatos-->
-    <title>Flappy Bird</title> 
+<head>
+    <!-- Metadatos-->
+    <title>Flappy Bird</title>
     <title>Flappy Bird</title>
     <meta charset="utf-8">
     <meta name="keywords" content="juego, Flappy Bird, juego en linea">
     <meta name="autores" content="Aimara Gomez y Juliana Marengo">
     <link rel="icon" href="img/flappybird.ico">
-    <meta name="description" content="Es un juego en linea cuyo funcionamiento consiste en mantener volando a un pequeño pájaro pixelado que ha de pasar entre tuberías">
+    <meta name="description"
+          content="Es un juego en linea cuyo funcionamiento consiste en mantener volando a un pequeño pájaro pixelado que ha de pasar entre tuberías">
     <!--css dirigido al archivo de css-->
     <link rel="stylesheet" type="text/css" href="estilo.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,200&display=swap"rel="stylesheet">
-      <style>        
-        canvas{
-                                                                        
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,200&display=swap" rel="stylesheet">
+    <style>
+        canvas {
+
             border: 5px solid #259564;
             margin-top: 100px;
             margin-left: auto;
             margin-right: auto;
             border-radius: 7px;
             display: block;
-           
+
         }
     </style>
-  </head>
-  <body>
-       <canvas id="personaje" width="320" height="480"></canvas>
-        <script src="desarrollo_juego.js" charset="utf-8"></script>
-       <div>
-                <form action="index.html">
-                    <button type="submit" id="Salir">Salir</button>
-                </form>
-      </div>
-  
-  </body>
+</head>
+<body>
+<canvas id="personaje" width="320" height="480"></canvas>
+<script src="desarrollo_juego.js" charset="utf-8"></script>
+<div>
+    <form action="index.html">
+        <button type="submit" id="Salir">Salir</button>
+    </form>
+</div>
+
+</body>
 </html>
